# Plot3D_utilities

./: .gitignore  .gitlab-ci.yml  .readthedocs.yaml  LICENSE  README.md  partition.out  pyproject.toml
python/: .gitignore  pyproject.toml  requirements.txt  setup.py
python/examples/: merge_block_test.ipynb  merge_block_test.py
python/examples/Cascade/: block-paraview_plot.py  block-split_paraview_plot.py  cascade_split_test.py  cascade_test.py  finalmesh-block-split.ght_conn  finalmesh.ght_conn  glennht_con.py  paht_test.py  pv_library.py  pv_plot.py  pv_plot_split.py  vspt.ght_conn
python/examples/E3_7/: E3_7_Assembly.ght_conn  E3_7_Assembly_6_blocks.ght_conn  E3_7_test.py  check_connectivity_differences.py  test.ght_conn
python/examples/ap_nasa_to_plot3d/: ap_nasa.ipynb
python/examples/backward_step/: 3D_backstep_9p6M_short2.ght_conn  backward_step_test.py
python/examples/block_test/: block.ght_conn  block_test.ght_conn  block_test.py  block_tutorial.ipynb  iso65_64blocks.p3d_conn  pv_library.py  pv_plot.py
python/examples/cascade_axial_duplication/: Readme.md  block-paraview_plot.py  block-split_paraview_plot.py  cascade_test.py  finalmesh.ght_conn  paht_test.py  pv_library.py
python/examples/glennht/: ali_cmc_test.py  paraview_plot.sh  pv_library.py  pv_plot_bcs.py  pv_plot_facematch.py  pv_plot_periodicity.py  readme.md
python/examples/grid_packed/: boundary_conditions.bcs  boundary_conditions.json  connectivity.ght_conn  ddcmp_info.txt  grid_packed_binary.tmp.tmp.conn_n  job  process_mesh.py
python/examples/metis-block-graph/: block_to_graph_4blocktest.py  block_to_graph_test.py  block_to_graph_test_large.py  example.dot  flat_plate.ght_conn  ghtcon_to_ddcmp.py  kenji_diced_1.p3d_conn  read_glennht_to_conn.py  readme.md
python/examples/metis-grid-splitting/: connectivity-julia.json  graph2.py  metis-test.py  plot3d_to_networkx.ipynb  plot3d_to_networkx.py  renumber_vertices.py
python/examples/paraview_plot/: paht_test.py
python/examples/pointwise/: process_pointwise_mesh.py
python/examples/read_write_formats/: read_write_formats.ipynb
python/examples/stage_test/: boundary_conditions.bcs  boundary_conditions_template.bcs  combine_connectivity.py  connected_face_rotor.py  connected_face_stator.py  connected_face_test.py  glennht_library.py  job_template.ght  negative_volume.txt  periodicity.py  pv_library.py  pv_rotor_plot.py  pv_stator_plot.py  readme.md  (+6 more)
python/plot3d/: __init__.py  block.py  block_merging_mixed_facepairs.py  blockfunctions.py  connectivity.py  face.py  facefunctions.py  graph.py  listfunctions.py  periodicity.py  point_match.py  read.py  split_block.py  write.py
(+203 files in other folders)
