[tool.poetry]
name = "plot3d"
version = "1.6.8"
description = "Plot3D python utilities for reading and writing and also finding connectivity between blocks"
authors = ["Paht Juangphanich <paht.juangphanich@nasa.gov>"]

[tool.poetry.dependencies]
python = "^3.10.1"
numpy = "2.*"
scipy = "*"
pandas = "*"
tqdm = "*"
networkx = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=1.1.2"]
build-backend = "poetry.masonry.api"    
