[tool.poetry]
name = "plot3d"
version = "1.7.0"
description = "Plot3D python utilities for reading and writing and also finding connectivity between blocks"
authors = ["Paht Juangphanich <paht.juangphanich@nasa.gov>"]

[tool.poetry.dependencies]
python = "^3.10.12"
numpy = "*"
scipy = "*"
pandas = "*"
tqdm = "*"
networkx = "*"

[tool.poetry.group.deve.dependencies]

[build-system]
requires = ["poetry>=1.1.2"]
build-backend = "poetry.masonry.api"    
