[tool.poetry]
name = "plot3d"
version = "1.7.11"
description = "Plot3D python utilities for reading and writing and also finding connectivity between blocks"
authors = ["Paht Juangphanich <paht.juangphanich@nasa.gov>"]

[tool.poetry.dependencies]
python = "^3.10.12"
numpy = "*"
scipy = "*"
pandas = "*"
tqdm = "*"
networkx = "*"
pymetis = { version = "*", markers = "platform_system != 'Windows'" }
matplotlib = "*"

[tool.poetry.group.deve.dependencies]

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^7.4"
sphinx-rtd-theme = "^2.0"
sphinx-autobuild = "^2024.4"

[build-system]
requires = ["poetry>=1.1.2"]
build-backend = "poetry.masonry.api"    
