[package]
name = "py_monte_carlo_pi"
version = "0.1.0"
edition = "2018"

[dependencies]
monte_carlo_pi = {path = "../monte_carlo_pi"}

[lib]
name = "montecarlopi"
crate-type = ["cdylib"]

[dependencies.cpython]
version = "0.6"
features = ["extension-module"]

[target.x86_64-apple-darwin]
rustflags = [
  "-C", "link-arg=-undefined",
  "-C", "link-arg=dynamic_lookup",
]