[package]
name = "pyo3_monte_carlo_pi"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "montecarlopi"
crate-type = ["cdylib"]

[dependencies]
monte_carlo_pi = {path = "../monte_carlo_pi"}

[dependencies.pyo3]
version = "0.14.5"
features = ["extension-module"]